Dans la page principale HOME, il faut que lorsque l'on clique sur une categorie, on ait la liste des stores pour cette categorie et que lorsque l'on clique sur un magasin on ait le detail de celui-ci.

--- a/Frismart/Base.lproj/Main.storyboard
+++ b/Frismart/Base.lproj/Main.storyboard
@@ -159,8 +159,8 @@
                         <outlet property="storesSectionLabel" destination="4BM-qh-MgN" id="sta-o8-6ah"/>
                         <outlet property="topCategoriesScrollView" destination="DpD-J1-4Up" id="WXr-4H-WEv"/>
                         <outlet property="topStoresScrollView" destination="OIi-WT-ifZ" id="VFp-d8-uA0"/>
-                        <segue destination="AWC-O5-SMn" kind="show" identifier="showTopStoreDetailsSegue" action="showDetailViewController:sender:" id="raD-cf-CHU"/>
                         <segue destination="Z1e-hA-m5l" kind="show" identifier="showStoresForTopCategorySegue" id="HgH-sj-ZHL"/>
+                        <segue destination="AWC-O5-SMn" kind="show" identifier="showTopStoreDetailsSegue" id="qtZ-6u-apP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="An2-jv-Va2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -271,7 +271,7 @@
                                             <color key="textColor" red="0.12156862745098039" green="0.5490196078431373" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="5.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q9K-1w-zqF">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q9K-1w-zqF">
                                             <rect key="frame" x="8" y="41" width="54" height="33"/>
                                             <animations/>
                                             <constraints>
@@ -321,7 +321,7 @@
                                                 <constraint firstAttribute="height" constant="1" id="dIQ-t6-T1j"/>
                                             </constraints>
                                         </view>
-                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cOC-w8-7yt" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cOC-w8-7yt" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
                                             <rect key="frame" x="63" y="45" width="80" height="18"/>
                                             <animations/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -692,12 +692,13 @@
                             <outlet property="delegate" destination="AWC-O5-SMn" id="2Av-Wr-4DK"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="CTF-Cp-R3t"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="789"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TGS-za-oKh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3474" y="605.5"/>
+            <point key="canvasLocation" x="3544" y="605.5"/>
         </scene>
         <!--Stores Per Category View Controller-->
         <scene sceneID="1JW-NW-k61">
@@ -727,7 +728,7 @@
                                             <color key="textColor" red="0.1215686275" green="0.54901960780000003" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="5.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D14-no-S9H">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D14-no-S9H">
                                             <rect key="frame" x="32" y="28" width="38" height="33"/>
                                             <animations/>
                                             <constraints>
@@ -738,7 +739,7 @@
                                             <color key="textColor" red="0.98431372549999996" green="0.68235294120000001" blue="0.090196078430000007" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7RB-a1-Neu" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7RB-a1-Neu" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
                                             <rect key="frame" x="74" y="36" width="58" height="11"/>
                                             <animations/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -830,7 +831,7 @@
                         </connections>
                     </tableView>
                     <connections>
-                        <segue destination="AWC-O5-SMn" kind="show" identifier="getStoreDetailsSegue" id="ZxN-0q-No1"/>
+                        <segue destination="AWC-O5-SMn" kind="show" identifier="getStoreDetailsSegue" id="fwX-39-brj"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EjP-1W-Xvm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1343,7 +1344,7 @@
                                             <color key="textColor" red="0.1215686275" green="0.54901960780000003" blue="0.72156862749999995" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="5.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5e-l1-nOi">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5e-l1-nOi">
                                             <rect key="frame" x="32" y="28" width="38" height="33"/>
                                             <animations/>
                                             <constraints>
@@ -1354,7 +1355,7 @@
                                             <color key="textColor" red="0.98431372549999996" green="0.68235294120000001" blue="0.090196078430000007" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0bH-Uz-rSm" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0bH-Uz-rSm" customClass="FloatRatingView" customModule="Frismart" customModuleProvider="target">
                                             <rect key="frame" x="74" y="36" width="58" height="11"/>
                                             <animations/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1571,7 +1572,7 @@
         <image name="StoreDetails_Website" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="raD-cf-CHU"/>
+        <segue reference="qtZ-6u-apP"/>
         <segue reference="HgH-sj-ZHL"/>
     </inferredMetricsTieBreakers>
 </document>
